Initialize next_update_time_ to allow immediate updating

BUG=598412

Review URL: https://codereview.chromium.org/1845643002

Cr-Commit-Position: refs/heads/master@{#384112}

Former-commit-id: 531801a428d092a4bd50b0e75d5ba03cd1c21612