components/safe_browsing_db/v4_update_protocol_manager_unittest.cc
@@ -123,15 +123,8 @@ void ValidateGetUpdatesResults(
 }
 
 // TODO(vakh): Add many more tests.
-#if defined(OS_ANDROID)
-// Flakes on Android: https://crbug.com/598412
-#define MAYBE_TestGetUpdatesErrorHandlingNetwork \
-        DISABLED_TestGetUpdatesErrorHandlingNetwork
-#else
-#define MAYBE_TestGetUpdatesErrorHandlingNetwork \
-        TestGetUpdatesErrorHandlingNetwork
-#endif
-TEST_F(V4UpdateProtocolManagerTest, MAYBE_TestGetUpdatesErrorHandlingNetwork) {
+
+TEST_F(V4UpdateProtocolManagerTest, TestGetUpdatesErrorHandlingNetwork) {
   net::TestURLFetcherFactory factory;
   scoped_ptr<V4UpdateProtocolManager> pm(CreateProtocolManager());
 
@@ -153,16 +146,7 @@ TEST_F(V4UpdateProtocolManagerTest, MAYBE_TestGetUpdatesErrorHandlingNetwork) {
   EXPECT_EQ(1ul, pm->update_back_off_mult_);
 }
 
-#if defined(OS_ANDROID)
-// Flakes on Android: https://crbug.com/598412
-#define MAYBE_TestGetUpdatesErrorHandlingResponseCode \
-        DISABLED_TestGetUpdatesErrorHandlingResponseCode
-#else
-#define MAYBE_TestGetUpdatesErrorHandlingResponseCode \
-        TestGetUpdatesErrorHandlingResponseCode
-#endif
-TEST_F(V4UpdateProtocolManagerTest, \
-       MAYBE_TestGetUpdatesErrorHandlingResponseCode) {
+TEST_F(V4UpdateProtocolManagerTest, TestGetUpdatesErrorHandlingResponseCode) {
   net::TestURLFetcherFactory factory;
   scoped_ptr<V4UpdateProtocolManager> pm(CreateProtocolManager());
 
@@ -186,16 +170,7 @@ TEST_F(V4UpdateProtocolManagerTest, \
   EXPECT_EQ(1ul, pm->update_back_off_mult_);
 }
 
-
-#if defined(OS_ANDROID)
-// Flakes on Android: https://crbug.com/598412
-#define MAYBE_TestGetUpdatesNoError \
-        DISABLED_TestGetUpdatesNoError
-#else
-#define MAYBE_TestGetUpdatesNoError \
-        TestGetUpdatesNoError
-#endif
-TEST_F(V4UpdateProtocolManagerTest, MAYBE_TestGetUpdatesNoError) {
+TEST_F(V4UpdateProtocolManagerTest, TestGetUpdatesNoError) {
   net::TestURLFetcherFactory factory;
   scoped_ptr<V4UpdateProtocolManager> pm(CreateProtocolManager());
 
